# Timelens

./: .gitignore  README.md  app.vue  nuxt.config.ts  package.json
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  timelens.rs  tray.rs
