[package]
name = "timelens-client"
version = "0.1.0"
description = "Timelens-Client"
authors = ["pandadev"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-rc.11", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.13", features = [ "macos-private-api", "tray-icon", "image-ico", "devtools"] }
tauri-plugin-fs = "2.0.0-rc.1"
tauri-plugin-autostart = "2.0.0-rc.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sysinfo = "0.31.4"
directories = "5.0.1"
dialoguer = "0.11.0"
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
url = "2.5.0"
futures-util = "0.3.30"
tokio = { version = "1.40.0", features = ["full"] }
http = "1.1.0"
rand = "0.8.5"
base64 = "0.22.1"
active-win-pos-rs = "0.8.3"
chrono = "0.4.33"

[target.'cfg(target_os = "macos")'.dependencies]
applications = "0.2.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
