[package]
name = "timelens-client"
version = "0.1.1"
description = "Timelens-Client"
authors = ["pandadev"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
tauri = { version = "2.0.6", features = [ "macos-private-api", "tray-icon", "image-ico", "devtools"] }
tauri-plugin-fs = "2.0.3"
tauri-plugin-autostart = "2.0.1"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
sysinfo = "0.32.0"
directories = "5.0.1"
dialoguer = "0.11.0"
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
url = "2.5.0"
futures-util = "0.3.31"
tokio = { version = "1.41.0", features = ["full"] }
http = "1.1.0"
rand = "0.8.5"
base64 = "0.22.1"
active-win-pos-rs = "0.8.3"
chrono = "0.4.33"

[target.'cfg(target_os = "macos")'.dependencies]
applications = "0.2.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
